--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -94,6 +94,23 @@
     "6MilionsTo8Milions": "6-8 triệu",
     "8MilionsTo10Milions": "8-10 triệu",
     "over10Milions": "Trên 10 triệu",
-    "deal": "Thỏa thuận"
+    "deal": "Thỏa thuận",
+    "below20M2": "Dưới 20 M2",
+    "over100M2": "Trên 100 M2"
+  },
+  "sloganText": "Cho Thuê Phòng Trọ, Thuê Nhà Trọ Giá Rẻ, Chính Chủ",
+  "postPage": {
+    "area": "Khu vực",
+    "ward": "Xã",
+    "post": "Đăng tin",
+    "addressDetails": "Địa chỉ chi tiết",
+    "required": "Bắt buộc",
+    "price": "Giá/tháng",
+    "title": "Tiêu đề",
+    "description": "Mô tả",
+    "owner": "Chủ nhà",
+    "phoneNumber": "Số điện thoại",
+    "createPost": "Đăng tin và thanh toán",
+    "updatePost": "Cập nhật"
   }
 }
