--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -84,6 +84,7 @@
   "labelInput": {
     "city": "Thành phố",
     "district": "Quận",
+    "ward": "Xã",
     "priceRange": "Khoảng giá",
     "acreage": "Diện tích",
     "all": "Tất cả",
@@ -96,7 +97,8 @@
     "over10Milions": "Trên 10 triệu",
     "deal": "Thỏa thuận",
     "below20M2": "Dưới 20 M2",
-    "over100M2": "Trên 100 M2"
+    "over100M2": "Trên 100 M2",
+    "reset": "Đặt lại"
   },
   "sloganText": "Cho Thuê Phòng Trọ, Thuê Nhà Trọ Giá Rẻ, Chính Chủ",
   "postPage": {
