feat: update  translate, footer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,5 +115,9 @@
     "phoneNumber": "Phone Number",
     "createPost": "Create Post And Pay",
     "updatePost": "Update Post"
+  },
+  "homePage": {
+    "mostViewed": "Most Viewed",
+    "newest": "Newest"
   }
 }
