feat" update search page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,7 +99,8 @@
     "deal": "Deal",
     "over100M2": "Over 100 M2",
     "below20M2": "Below 20 M2",
-    "reset": "Reset"
+    "reset": "Reset",
+    "search": "Search"
   },
   "sloganText": "Rooms for Rent, Cheap Rooms for Rent, Owner",
   "postPage": {
