--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -98,7 +98,8 @@
     "deal": "Thỏa thuận",
     "below20M2": "Dưới 20 M2",
     "over100M2": "Trên 100 M2",
-    "reset": "Đặt lại"
+    "reset": "Đặt lại",
+    "search": "Tìm kiếm"
   },
   "sloganText": "Cho Thuê Phòng Trọ, Thuê Nhà Trọ Giá Rẻ, Chính Chủ",
   "postPage": {
