update sendmail and  pay

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -120,7 +120,7 @@
     "description": "Description",
     "owner": "Owner",
     "phoneNumber": "Phone Number",
-    "createPost": "Create Post And Pay",
+    "createPost": "Create Post And Pay With 2$",
     "updatePost": "Update Post"
   },
   "homePage": {
