--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -119,7 +119,7 @@
     "description": "Mô tả",
     "owner": "Chủ nhà",
     "phoneNumber": "Số điện thoại",
-    "createPost": "Đăng tin và thanh toán",
+    "createPost": "Đăng tin và thanh toán 50K",
     "updatePost": "Cập nhật"
   },
   "homePage": {
