--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,12 @@
     "home": "Home",
     "accountInfor": "Account Information",
     "postManagement": "Post Management",
-    "logout": "Logout"
+    "logout": "Logout",
+    "posts": "Posts",
+    "accounts": "Accounts",
+    "reports": "Reports",
+    "backToHome": "Back To Home Page",
+    "adminManagement": "Admin Management"
   },
 
   "Button": {
@@ -106,7 +111,9 @@
     "over100M2": "Over 100 M2",
     "below20M2": "Below 20 M2",
     "reset": "Reset",
-    "search": "Search"
+    "search": "Search",
+    "title": "Title",
+    "owner": "Owner"
   },
   "sloganText": "Rooms for Rent, Cheap Rooms for Rent, Owner",
   "postPage": {
