--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -13,7 +13,12 @@
     "home": "Trang chủ",
     "accountInfor": "Thông tin tài khoản",
     "postManagement": "Quản lý bài đăng",
-    "logout": "Đăng xuất"
+    "logout": "Đăng xuất",
+    "posts": "Bài đăng",
+    "accounts": "Tài khoản",
+    "reports": "Báo cáo",
+    "backToHome": "Quay về trang chủ",
+    "adminManagement": "Trang quản trị"
   },
 
   "Button": {
@@ -105,7 +110,9 @@
     "below20M2": "Dưới 20 M2",
     "over100M2": "Trên 100 M2",
     "reset": "Đặt lại",
-    "search": "Tìm kiếm"
+    "search": "Tìm kiếm",
+    "title": "Tiêu đề",
+    "owner": "Chủ sở hữu"
   },
   "sloganText": "Cho Thuê Phòng Trọ, Thuê Nhà Trọ Giá Rẻ, Chính Chủ",
   "postPage": {
