update multil language comment button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,7 +41,9 @@
     "confirm": "Confirm",
     "report": "Report",
     "call": "Call",
-    "send": "Send"
+    "send": "Send",
+    "more": "More",
+    "hide": "Hide"
   },
 
   "PopUpRegister": {
