--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -41,7 +41,9 @@
     "confirm": "Xác nhận",
     "report": "Báo cáo",
     "call": "Gọi điện",
-    "send": "Gửi"
+    "send": "Gửi",
+    "more": "Đọc thêm",
+    "hide": "Ẩn bớt"
   },
 
   "PopUpRegister": {
