feat: add api change view map

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -130,7 +130,8 @@
     "owner": "Owner",
     "active": "Active",
     "deactivate": "Deactivate",
-    "type": "Type"
+    "type": "Type",
+    "houseNumberStreet": "House number, street"
   },
   "sloganText": "Rooms for Rent, Cheap Rooms for Rent, Owner",
   "postPage": {
