update acount statust enum, call type post, roleID

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -207,7 +207,8 @@
       "status": "Status",
       "deleteAccount": "Delete Account",
       "block": "Block",
-      "unBlock": "Unblock"
+      "unBlock": "Unblock",
+      "createDate": "Create Date"
     },
     "reportpage": {
       "listReports": "Reports List ",
