--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -105,7 +105,9 @@
     "pleaseSelectResionReport": "Please Select Resion Report",
     "emailOrPasswordIsIncorrect": "Email or Password is incorrect",
     "oldPasswordIncorrect": "Old Password is incorrect",
-    "checkMailToActiveAccount": "Please check your email to activate your account"
+    "checkMailToActiveAccount": "Please check your email to activate your account",
+    "pending": "Wait for pay",
+    "payed": "Paid"
   },
 
   "item": {
