feat: update comment, pay history

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -109,7 +109,9 @@
     "oldPasswordIncorrect": "Old Password is incorrect",
     "checkMailToActiveAccount": "Please check your email to activate your account",
     "pending": "Wait for pay",
-    "payed": "Paid"
+    "payed": "Paid",
+    "commentSucceeded": "Comment Succeeded",
+    "commentFalse": "Comment False"
   },
 
   "item": {
